# OaPython

./: .env  README.md  main.py  pyproject.toml
api/: utils.py
oa_backend/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
